<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            style="@style/ButtonControlStyle"
            android:text="@string/previous"/>

        <Button
            style="@style/ButtonControlStyle"
            android:text="@string/pause"/>

        <Button
            style="@style/ButtonControlStyle"
            android:text="@string/play"/>

        <Button
            style="@style/ButtonControlStyle"
            android:text="@string/stop"/>

        <Button
            style="@style/ButtonControlStyle"
            android:text="@string/next"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:id="@+id/backButton" />

</LinearLayout>